<resources>
    <string name="app_name">TrackMaster</string>
    <string name="empty"> </string>

    <!--Button Descriptions-->
    <string name="main_athlete_list">ATHLETES</string>
    <string name="main_workout_list">WORKOUTS</string>
    <string name="athlete_list_back">Back</string>
    <string name="athlete_list_add">Add Athlete</string>
    <string name="athlete_add_save">CREATE ATHLETE</string>
    <string name="athlete_add_records">ADD RECORDS</string>
    <string name="athlete_edit_save">SAVE ATHLETE</string>
    <string name="athlete_edit_records">EDIT RECORDS</string>
    <string name="athlete_edit_delete">Delete Athlete</string>
    <string name="athlete_view_records">VIEW RECORDS</string>

    <!--Image Descriptions-->
    <string name="main_logo">Logo</string>
    <string name="profile_picture">Athlete Profile Picture</string>

    <!--TextViews-->
    <string name="athlete_list_title">ATHLETES</string>
    <string name="athlete_edit_title">EDIT ATHLETE</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="record_list_adapter_distance">%1$dm</string>
    <string name="workout_list_title">WORKOUTS</string>
    <string name="section_row_distance">Distance:</string>
    <string name="section_row_pace">Pace:</string>

    <!--Text Input Hints-->
    <string name="name">Name</string>
    <string name="title_activity_create_workout">CreateWorkoutActivity</string>
    <string name="activity_main_title">Main Menu</string>
</resources>