<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".WorkoutListActivity">

    <View
        android:id="@+id/workout_list_top_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#00263C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_workout_list_title"
        app:layout_constraintVertical_bias="0.007" />

    <ImageButton
        android:id="@+id/activity_workout_list_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/athlete_list_back"
        android:onClick="back"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/activity_workout_list_title"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato"
        android:text="@string/workout_list_title"
        android:textColor="#FFFFFF"
        android:textSize="31sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/activity_workout_list_add"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/athlete_list_add"
        android:onClick="addWorkout"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plus" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workout_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workout_list_top_border"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>